<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileSettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/myruns_menu"
        app:title="MyRuns5"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <TextView
            android:id="@+id/profilePhoto_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/profilePhoto_imageView"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:contentDescription="@string/profile_photo_desc"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:srcCompat="@tools:sample/avatars" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/changePhoto_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    tools:ignore="VisualLintButtonSize" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <Button
                    android:id="@+id/gallery_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/phone_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            android:autofillHints=""
            android:maxLength="10"
            tools:ignore="VisualLintTextFieldSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/gender_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/gender_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checkedButton="@id/female_radioButton"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/female_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/male_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                tools:ignore="VisualLintButtonSize" />
        </RadioGroup>

        <TextView
            android:id="@+id/class_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_num"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/class_editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/eg_2012"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/major_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/major_editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_major"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                tools:ignore="VisualLintButtonSize" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                tools:ignore="ButtonOrder,VisualLintButtonSize" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>